fix affichage version mobile

--- a/stemcorp-app/src/pages/song-pages/SongPagesLayout.css
+++ b/stemcorp-app/src/pages/song-pages/SongPagesLayout.css
@@ -21,7 +21,6 @@
 .song-info {
   display: flex;
   flex-direction: column;
-  margin-top: 6rem;
   align-items: center;
   text-align: center;
   gap: 0.8rem;
@@ -35,7 +34,6 @@
 }
 
 .song-text-info {
-  margin-top: 0rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -67,7 +65,7 @@
 
 .bottom-section {
   margin-top: 2rem;
-  width: 90%;
+  width: 95%;
   background-color: #292929;
   border-radius: 30px;
   padding: 2rem;
@@ -114,4 +112,22 @@ h2 {
   align-items: left;
   padding-left: 1.2rem;
   gap: 0.3rem;
+}
+
+.lyrics-container {
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.lyrics {
+  width: 100%;
+  text-align: left; /* Aligne le texte au centre si c'est le style voulu */
+  white-space: pre-line; /* Conserve les sauts de ligne naturels des paroles s'il y en a */
+  overflow-wrap: break-word; /* Force le texte à se couper si un mot est trop long */
+  word-break: break-word; /* Sécurité supplémentaire pour les anciens navigateurs */
 }
